Reduce the left/right padding in 5px instead of 8px, to avoid distortion
We will better aim for reducing the distance to the edges less for now,
so that we don't distort the button at all, and will revisit later.

[endlessm/eos-shell#3494]

--- a/data/eos-app-store.css
+++ b/data/eos-app-store.css
@@ -236,8 +236,8 @@
 
     background-image: url("btn_install_normal_middle.png");
     background-position: -4px;
-    border-image: url("btn_install_normal_border.png") 4 17 4 17 / 4px 14px 4px 14px;
-    border-width: 4px 14px 4px 14px;
+    border-image: url("btn_install_normal_border.png") 4 17 4 17 / 4px 17px 4px 17px;
+    border-width: 4px 17px 4px 17px;
 
     /* Setting padding to 0px gets the text 4px closer to each edge */
     padding-left: 0px;
